--- a/index.html
+++ b/index.html
@@ -145,14 +145,33 @@
             <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </div>
         </div>
-        <img class="kaufman__triangle" src="images/kaufman-triangle.svg" alt="Синий трейгольник на фоне"></img>
+        <img class="kaufman__triangle" src="images/kaufman-triangle.svg" alt="Синий трейгольник на фоне">
       </section>
     </main>
 
     <!-- Подвал сайта -->
 
     <footer class="footer">
-
+      <div class="footer__columns">
+        <div class="footer__column footer__column_content_copyright">
+          <div class="logo logo_place_footer"></div>
+          <p class="footer__author">&copy; 2021, Латыпов Роман</p>
+        </div>
+        <div class="footer__column footer__column_content_info">
+          <h3 class="footer__column-heading">О Практикуме</h3>
+          <div class="footer__column-links">
+            <a href="#" class="footer__column-link">Главная</a>
+            <a href="#" class="footer__column-link">Концепция</a>
+            <a href="#" class="footer__column-link">Наставники</a>
+          </div>
+        </div>
+        <div class="footer__column footer__column_content_social">
+          <h3 class="footer__column-heading">Соцсети</h3>
+          <a href="#" class="footer__column-link footer__column-link_content_social"><img src="./images/facebook_color_white.svg" alt="Facebook" class="footer__social-icon">Facebook</a>
+          <a href="#" class="footer__column-link footer__column-link_content_social"><img src="./images/vk_color_white.svg" alt="Вконтакте" class="footer__social-icon">Вконтакте</a>
+          <a href="#" class="footer__column-link footer__column-link_content_social"><img src="./images/instagram_color_white.svg" alt="Instagram" class="footer__social-icon">Instagram</a>
+        </div>
+      </div>
     </footer>
   </div>
 </body>
