--- a/index.html
+++ b/index.html
@@ -167,9 +167,9 @@
         </div>
         <div class="footer__column footer__column_content_social">
           <h3 class="footer__column-heading">Соцсети</h3>
-          <a href="#" class="footer__column-link footer__column-link_content_social"><img src="./images/facebook_color_white.svg" alt="Facebook" class="footer__social-icon">Facebook</a>
-          <a href="#" class="footer__column-link footer__column-link_content_social"><img src="./images/vk_color_white.svg" alt="Вконтакте" class="footer__social-icon">Вконтакте</a>
-          <a href="#" class="footer__column-link footer__column-link_content_social"><img src="./images/instagram_color_white.svg" alt="Instagram" class="footer__social-icon">Instagram</a>
+          <a href="#" class="footer__column-link"><img src="./images/facebook_color_white.svg" alt="Facebook" class="footer__social-icon">Facebook</a>
+          <a href="#" class="footer__column-link"><img src="./images/vk_color_white.svg" alt="Вконтакте" class="footer__social-icon">Вконтакте</a>
+          <a href="#" class="footer__column-link"><img src="./images/instagram_color_white.svg" alt="Instagram" class="footer__social-icon">Instagram</a>
         </div>
       </div>
     </footer>
