added link hover and review fixes

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
           <nav class="footer__column-links">
             <ul class="footer__list">
               <li><a href="#" class="footer__column-link">Главная</a></li>
-              <li><a href="#" class="footer__column-link">Концепция</a><li>
+              <li><a href="#" class="footer__column-link">Концепция</a></li>
               <li><a href="#" class="footer__column-link">Наставники</a></li>
           </ul>
           </nav>
