--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
   <meta name="description" content="Портфолию Романа Латыпова, дающее толику надежды в безуспешном поиске трудоустройства">
   <meta name="keywords" content="HTML, CSS, Портфолио">
   <meta name="author" content="Роман Латыпов">
-  <link rel="stylesheet" href="./styles/normalize.css">
-  <link rel="stylesheet" href="./styles/style.css">
   <link rel="stylesheet" href="./pages/index.css">
   <title>Научиться учиться</title>
 </head>
@@ -182,7 +180,7 @@
           <p class="khan__quote-author">Джордж Лукас</p>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
-            <img class="khan__book-pic" src="/how-to-learn/images/khan-book.jpg" alt="Обложка книги: Весь мир - школа">
+            <img class="khan__book-pic" src="./images/khan-book.jpg" alt="Обложка книги: Весь мир - школа">
             <a class="khan__buy-link" href="#">Купить книгу →</a>
           </div>
         </div>
