project2 after review fixes

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <!-- Шапка сайта -->
 
     <header class="header">
-      <div class="logo logo_location_header"></div>
+      <div class="logo logo_place_header"></div>
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">
         Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
-        <a href="#" class="header__link">Узнать →</a>
+        <a href="#" class="header__link">Узнать &#10230;</a>
       </p>
       <div class="header__main-illustration"></div>
       <div class="rotation header__square-pic"></div>
@@ -56,27 +56,27 @@
         <p class="section-subtitle">Пять практик от Барбары Оакли</p>
         <ul class="cards">
           <li class="cards__item">
-            <img class="cards__image" src="./images/cards-attention.png" alt="101 эссе, которое изменит ваше мышление">
+            <img class="cards__image" src="./images/cards-attention.jpg" alt="101 эссе, которое изменит ваше мышление">
             <h3 class="cards__title">Два вида внимания</h3>
             <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
           </li>
           <li class="cards__item">
-            <img class="cards__image" src="./images/cards-recall.png" alt="Скульптура">
+            <img class="cards__image" src="./images/cards-recall.jpg" alt="Скульптура">
             <h3 class="cards__title">Recall</h3>
             <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
           </li>
           <li class="cards__item">
-            <img class="cards__image" src="./images/cards-interliving.png" alt="Арт-объект">
+            <img class="cards__image" src="./images/cards-interliving.jpg" alt="Арт-объект">
             <h3 class="cards__title">Интерливинг</h3>
             <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
           </li>
           <li class="cards__item">
-            <img class="cards__image" src="./images/cards-question.png" alt="Человек в огромном помещении">
+            <img class="cards__image" src="./images/cards-question.jpg" alt="Человек в огромном помещении">
             <h3 class="cards__title">Вопросы</h3>
             <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
           </li>
           <li class="cards__item">
-            <img class="cards__image" src="./images/cards-competence.png" alt="Стопка книг">
+            <img class="cards__image" src="./images/cards-competence.jpg" alt="Стопка книг">
             <h3 class="cards__title">Иллюзия компетентности</h3>
             <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
           </li>
@@ -88,14 +88,14 @@
         <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
         <ul class="video__iframes">
           <li class="video__list">
-            <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY"
+            <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY"
                     title="YouTube video player"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media;
                     gyroscope; picture-in-picture" allowfullscreen>
             </iframe>
           </li>
           <li class="video__list">
-            <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU"
+            <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU"
                     title="YouTube video player"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media;
                     gyroscope; picture-in-picture" allowfullscreen>
@@ -172,16 +172,16 @@
         <div class="khan__container">
           <p class="khan__author">Салман Хан</p>
           <h2 class="khan__title">Весь мир — школа</h2>
-          <p class="khan__quote">
+          <blockquote class="khan__quote">
             Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру.
             Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания,
             которые приносят успех в школе, карьере и жизни.
-          </p>
+          </blockquote>
           <p class="khan__quote-author">Джордж Лукас</p>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
             <img class="khan__book-pic" src="./images/khan-book.jpg" alt="Обложка книги: Весь мир - школа">
-            <a class="khan__buy-link" href="#">Купить книгу →</a>
+            <a class="khan__buy-link" href="#">Купить книгу &#10230;</a>
           </div>
         </div>
       </section>
@@ -231,7 +231,7 @@
             <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </li>
         </ul>
-        <img class="kaufman__triangle rotation" src="images/kaufman-triangle.svg" alt="Синий трейгольник на фоне">
+        <div class="kaufman__triangle rotation"></div>
       </section>
 
       <section class="resourses">
@@ -267,7 +267,7 @@
     <footer class="footer">
       <div class="footer__columns">
         <div class="footer__column footer__column_content_copyright">
-          <div class="logo logo_location_footer"></div>
+          <div class="logo logo_place_footer"></div>
           <p class="footer__author">&copy; 2021, Латыпов Роман</p>
         </div>
         <div class="footer__column footer__column_content_info">
